--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest "
   },
   "keywords": [],
   "author": "",
@@ -26,6 +26,7 @@
     "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "dotenv": "^16.0.0",
     "jest": "^27.5.1",
     "mockingoose": "^2.15.2",
